added google login, and add rotation changed to campaign based
